--- a/01_FinalModelsPlan.Rmd
+++ b/01_FinalModelsPlan.Rmd
@@ -19,6 +19,8 @@ output:
 
 knitr::opts_chunk$set(echo = TRUE)
 
+rm(list = ls())
+
 #cmdstanr::set_cmdstan_path(path = "C:/Users/kueng/.cmdstan/cmdstan-2.35.0")
 #cmdstanr::set_cmdstan_path(path = "C:/Users/pascku/.cmdstan/cmdstan-2.36.0")
 
@@ -58,7 +60,7 @@ shutdown = FALSE
 report_ordinal = FALSE
 do_priorsense = FALSE
 get_bayesfactor = TRUE
-check_models = TRUE # ! set to TRUE !
+check_models = TRUE #
 
 if (get_bayesfactor) {
   stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
@@ -179,24 +181,24 @@ model_rows_random_ordinal <- c(model_rows_random,'disc')
 model_rownames_fixed <- c(
     "Intercept", 
     # "-- WITHIN PERSON MAIN EFFECTS --", 
-    "Daily persuasion experienced", 
-    "Daily persuasion utilized (partner's view)", # OR partner received
-    "Daily pressure experienced", 
-    "Daily pressure utilized (partner's view)", 
-    "Daily pushing experienced", 
-    "Daily pushing utilized (partner's view)", 
+    "Daily individual's experienced persuasion",  
+    "Daily partner's experienced persuasion", 
+    "Daily individual's experienced pressure", 
+    "Daily partner's experienced pressure", 
+    "Daily individual's experienced pushing", 
+    "Daily partner's experienced pushing", 
     "Day", 
     "Own Actionplan",
     'Partner Actionplan',
     "Daily weartime",
     
     # "-- BETWEEN PERSON MAIN EFFECTS",
-    "Mean persuasion experienced", 
-    "Mean persuasion utilized (partner's view)", 
-    "Mean pressure experienced", 
-    "Mean pressure utilized (partner's view)", 
-    "Mean pushing experienced", 
-    "Mean pushing utilized (partner's view)", 
+    "Mean individual's experienced persuasion", 
+    "Mean partner's experienced persuasion", 
+    "Mean individual's experienced pressure", 
+    "Mean partner's experienced pressure", 
+    "Mean individual's experienced pushing", 
+    "Mean partner's experienced pushing", 
     "Mean weartime"
   )
 
@@ -215,12 +217,12 @@ model_rownames_random <- c(
   # '--------------',
   # '-- RANDOM EFFECTS --',
   'sd(Intercept)', 
-  "sd(Daily persuasion experienced)", 
-  "sd(Daily persuasion utilized (partner's view))", # OR partner received
-  "sd(Daily pressure experienced)", 
-  "sd(Daily pressure utilized (partner's view))", 
-  "sd(Daily pushing experienced)", 
-  "sd(Daily pushing utilized (partner's view))", 
+  "sd(Daily individual's experienced persuasion)", 
+  "sd(Daily partner's experienced persuasion)", # OR partner received
+  "sd(Daily individual's experienced pressure)", 
+  "sd(Daily partner's experienced pressure)", 
+  "sd(Daily individual's experienced pushing)", 
+  "sd(Daily partner's experienced pushing)", 
   # '-- CORRELATION STRUCTURE -- ', 
   'sigma'
 )
@@ -667,7 +669,7 @@ if (do_priorsense) {
 rope_factor <- sd(log(pa_obj_log$data$pa_obj))
 rope_range_log = c(-0.1 * rope_factor, 0.1 * rope_factor)
 
-summarize_brms(
+summary_pa_obj <- summarize_brms(
   pa_obj_log, 
   stats_to_report = stats_to_report,
   rope_range = rope_range_log,
@@ -675,7 +677,9 @@ summarize_brms(
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = T) %>%
+  exponentiate = T) 
+
+summary_pa_obj %>%
   print_df(rows_to_pack = rows_to_pack)
 
 
@@ -795,14 +799,16 @@ if (do_priorsense) {
 
 ```{r report_mood_gauss, results='asis', fig.width=8, fig.height=6, dpi=300, cache=TRUE, cache.extra=c(mood_gauss_digest, report_function_hash)}
 
-summarize_brms(
+summary_mood <- summarize_brms(
   mood_gauss, 
   stats_to_report = stats_to_report,
   model_rows_fixed = model_rows_fixed,
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = F) %>%
+  exponentiate = F) 
+
+summary_mood %>%
   print_df(rows_to_pack = rows_to_pack)
 
 
@@ -935,7 +941,7 @@ if (do_priorsense) {
 
 ```{r report_reactance_ordinal, results='asis', fig.width=8, fig.height=6, dpi=300, cache=TRUE, cache.extra=c(reactance_ordinal_digest, report_function_hash)}
 
-summarize_brms(
+summary_reactance_ordinal <- summarize_brms(
   reactance_ordinal, 
   stats_to_report = stats_to_report,
   rope_range = c(-0.18, 0.18),
@@ -943,7 +949,9 @@ summarize_brms(
   model_rows_random = model_rows_random_ordinal,
   model_rownames_fixed = model_rownames_fixed_ordinal,
   model_rownames_random = model_rownames_random_ordinal,
-  exponentiate = T) %>%
+  exponentiate = T) 
+
+summary_reactance_ordinal %>%
   print_df(rows_to_pack = rows_to_pack_ordinal)
 
 
@@ -1076,14 +1084,16 @@ if (do_priorsense) {
 
 ```{r report_is_reactance, results='asis', fig.width=8, fig.height=6, dpi=300, cache=TRUE, cache.extra=c(is_reactance_digest, report_function_hash)}
 
-summarize_brms(
+summary_is_reactance <- summarize_brms(
   is_reactance, 
   stats_to_report = stats_to_report,
   model_rows_fixed = model_rows_fixed,
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = T) %>%
+  exponentiate = T) 
+
+summary_is_reactance %>%
   print_df(rows_to_pack = rows_to_pack)
 
 plot(
@@ -1121,38 +1131,41 @@ hypothesis(is_reactance, "exp(pressure_self_cw) > exp(pushing_self_cw)")
 
 ```{r report_sidebyside, results = 'asis'}
 
-all_models <- report_side_by_side(
-  pa_sub,
-  pa_obj_log,
-  mood_gauss,
-  #reactance_ordinal,
-  is_reactance,
-  
-  stats_to_report = c('CI'),
-  
-  model_rows_random = model_rows_random,
-  model_rows_fixed = model_rows_fixed,
-  model_rownames_random = model_rownames_random,
-  model_rownames_fixed = model_rownames_fixed
-) 
 
-
+all_models <- cbind(
+  summary_pa_sub[, !grepl('Rhat|ESS', colnames(summary_pa_sub))],
+  summary_pa_obj[, !grepl('Rhat|ESS', colnames(summary_pa_obj))],
+  summary_mood[, !grepl('Rhat|ESS', colnames(summary_mood))], 
+  summary_is_reactance[, !grepl('Rhat|ESS', colnames(summary_is_reactance))]
+  #, summary_reactance_ordinal[, !grepl('Rhat|ESS', colnames(summary_reactance_ordinal))]
+)
 
 
 
 # pretty printing
-
-summary_all_models <- all_models %>%
+if (get_bayesfactor) {
+  summary_all_models <- all_models %>%
   print_df(rows_to_pack = rows_to_pack) %>%
   add_header_above(
-    c(" ", "Subjective MVPA Hurdle Lognormal" = 4,  
-      "Device-Based MVPA Log (Gaussian)" = 2, 
-      "Mood Gaussian" = 2,
-      #"Reactance Ordinal" = 2,
-      "Reactance Dichotome" = 2
+    c(" ", "Subjective MVPA Hurdle Lognormal" = 16,  
+      "Device-Based MVPA Log (Gaussian)" = 8, 
+      "Mood Gaussian" = 8,
+      #"Reactance Ordinal" = 8,
+      "Reactance Dichotome" = 8
   )
 )
-
+} else {
+  summary_all_models <- all_models %>%
+    print_df(rows_to_pack = rows_to_pack) %>%
+    add_header_above(
+      c(" ", "Subjective MVPA Hurdle Lognormal" = 12,  
+        "Device-Based MVPA Log (Gaussian)" = 6, 
+        "Mood Gaussian" = 6,
+        #"Reactance Ordinal" = 6,
+        "Reactance Dichotome" = 6
+    )
+  )
+}
 
 export_xlsx(
   summary_all_models, 
@@ -1165,7 +1178,7 @@ export_xlsx(
 )
 
   
-print(summary_all_models)
+summary_all_models
 
 ```
 
