--- a/03_SensitivityPushingSeparate.Rmd
+++ b/03_SensitivityPushingSeparate.Rmd
@@ -19,6 +19,8 @@ output:
 
 knitr::opts_chunk$set(echo = TRUE)
 
+rm(list = ls())
+
 #cmdstanr::set_cmdstan_path(path = "C:/Users/kueng/.cmdstan/cmdstan-2.35.0")
 #cmdstanr::set_cmdstan_path(path = "C:/Users/pascku/.cmdstan/cmdstan-2.36.0")
 
@@ -57,8 +59,8 @@ use_mi = FALSE
 shutdown = FALSE
 report_ordinal = FALSE
 do_priorsense = FALSE
-get_bayesfactor = FALSE
-check_models = FALSE 
+get_bayesfactor = TRUE
+check_models = TRUE #
 
 if (get_bayesfactor) {
   stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
@@ -181,24 +183,24 @@ model_rows_random_ordinal <- c(model_rows_random,'disc')
 model_rownames_fixed <- c(
     "Intercept", 
     # "-- WITHIN PERSON MAIN EFFECTS --", 
-    "Daily persuasion experienced", 
-    "Daily persuasion utilized (partner's view)", # OR partner received
-    "Daily pressure experienced", 
-    "Daily pressure utilized (partner's view)", 
-    "Daily pushing experienced", 
-    "Daily pushing utilized (partner's view)", 
+    "Daily individual's experienced persuasion",  
+    "Daily partner's experienced persuasion", 
+    "Daily individual's experienced pressure", 
+    "Daily partner's experienced pressure", 
+    "Daily individual's experienced pushing", 
+    "Daily partner's experienced pushing", 
     "Day", 
     "Own Actionplan",
     'Partner Actionplan',
     "Daily weartime",
     
     # "-- BETWEEN PERSON MAIN EFFECTS",
-    "Mean persuasion experienced", 
-    "Mean persuasion utilized (partner's view)", 
-    "Mean pressure experienced", 
-    "Mean pressure utilized (partner's view)", 
-    "Mean pushing experienced", 
-    "Mean pushing utilized (partner's view)", 
+    "Mean individual's experienced persuasion", 
+    "Mean partner's experienced persuasion", 
+    "Mean individual's experienced pressure", 
+    "Mean partner's experienced pressure", 
+    "Mean individual's experienced pushing", 
+    "Mean partner's experienced pushing", 
     "Mean weartime"
   )
 
@@ -217,12 +219,12 @@ model_rownames_random <- c(
   # '--------------',
   # '-- RANDOM EFFECTS --',
   'sd(Intercept)', 
-  "sd(Daily persuasion experienced)", 
-  "sd(Daily persuasion utilized (partner's view))", # OR partner received
-  "sd(Daily pressure experienced)", 
-  "sd(Daily pressure utilized (partner's view))", 
-  "sd(Daily pushing experienced)", 
-  "sd(Daily pushing utilized (partner's view))", 
+  "sd(Daily individual's experienced persuasion)", 
+  "sd(Daily partner's experienced persuasion)", # OR partner received
+  "sd(Daily individual's experienced pressure)", 
+  "sd(Daily partner's experienced pressure)", 
+  "sd(Daily individual's experienced pushing)", 
+  "sd(Daily partner's experienced pushing)", 
   # '-- CORRELATION STRUCTURE -- ', 
   'sigma'
 )
@@ -252,6 +254,7 @@ rows_to_pack_ordinal <- list(
   )
 
 ```
+
 
 
 # WITHOUT PUSHING
@@ -493,15 +496,17 @@ pa_obj_log_digest <- digest::digest(pa_obj_log)
 rope_factor <- sd(log(pa_obj_log$data$pa_obj))
 rope_range_log = c(-0.1 * rope_factor, 0.1 * rope_factor)
 
-summarize_brms(
+summary_pa_obj <- summarize_brms(
   pa_obj_log, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   rope_range = rope_range_log,
   model_rows_fixed = model_rows_fixed,
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = T) %>%
+  exponentiate = T) 
+
+summary_pa_obj %>%
   print_df(rows_to_pack = rows_to_pack)
 
 
@@ -592,14 +597,16 @@ mood_gauss_digest <- digest::digest(mood_gauss)
 
 ```{r report_mood_gauss, results='asis', fig.width=8, fig.height=6, dpi=300}
 
-summarize_brms(
+summary_mood <- summarize_brms(
   mood_gauss, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   model_rows_fixed = model_rows_fixed,
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = F) %>%
+  exponentiate = F) 
+
+summary_mood %>%
   print_df(rows_to_pack = rows_to_pack)
 
 
@@ -692,15 +699,17 @@ reactance_ordinal_digest <- digest::digest(reactance_ordinal)
 
 ```{r report_reactance_ordinal, results='asis', fig.width=8, fig.height=6, dpi=300}
 
-summarize_brms(
+summary_reactance_ordinal <- summarize_brms(
   reactance_ordinal, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   rope_range = c(-0.18, 0.18),
   model_rows_fixed = model_rows_fixed_ordinal,
   model_rows_random = model_rows_random_ordinal,
   model_rownames_fixed = model_rownames_fixed_ordinal,
   model_rownames_random = model_rownames_random_ordinal,
-  exponentiate = T) %>%
+  exponentiate = T) 
+
+summary_reactance_ordinal %>%
   print_df(rows_to_pack = rows_to_pack_ordinal)
 
 
@@ -806,14 +815,16 @@ is_reactance_digest <- digest::digest(is_reactance)
 
 ```{r report_is_reactance, results='asis', fig.width=8, fig.height=6, dpi=300}
 
-summarize_brms(
+summary_is_reactance <- summarize_brms(
   is_reactance, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   model_rows_fixed = model_rows_fixed,
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = T) %>%
+  exponentiate = T) 
+
+summary_is_reactance %>%
   print_df(rows_to_pack = rows_to_pack)
 
 plot(
@@ -836,38 +847,40 @@ plot(
 
 ```{r report_sidebyside, results = 'asis'}
 
-all_models <- report_side_by_side(
-  pa_sub,
-  pa_obj_log,
-  mood_gauss,
-  #reactance_ordinal,
-  is_reactance,
-  
-  stats_to_report = c('CI'),
-  
-  model_rows_random = model_rows_random,
-  model_rows_fixed = model_rows_fixed,
-  model_rownames_random = model_rownames_random,
-  model_rownames_fixed = model_rownames_fixed
-) 
-
-
+all_models <- cbind(
+  summary_pa_sub[, !grepl('Rhat|ESS', colnames(summary_pa_sub))],
+  summary_pa_obj[, !grepl('Rhat|ESS', colnames(summary_pa_obj))],
+  summary_mood[, !grepl('Rhat|ESS', colnames(summary_mood))], 
+  summary_is_reactance[, !grepl('Rhat|ESS', colnames(summary_is_reactance))]
+  #, summary_reactance_ordinal[, !grepl('Rhat|ESS', colnames(summary_reactance_ordinal))]
+)
 
 
 
 # pretty printing
-
-summary_all_models <- all_models %>%
+if (get_bayesfactor) {
+  summary_all_models <- all_models %>%
   print_df(rows_to_pack = rows_to_pack) %>%
   add_header_above(
-    c(" ", "Subjective MVPA Hurdle Lognormal" = 4,  
-      "Device-Based MVPA Log (Gaussian)" = 2, 
-      "Mood Gaussian" = 2,
-      #"Reactance Ordinal" = 2,
-      "Reactance Dichotome" = 2
+    c(" ", "Subjective MVPA Hurdle Lognormal" = 16,  
+      "Device-Based MVPA Log (Gaussian)" = 8, 
+      "Mood Gaussian" = 8,
+      #"Reactance Ordinal" = 8,
+      "Reactance Dichotome" = 8
   )
 )
-
+} else {
+  summary_all_models <- all_models %>%
+    print_df(rows_to_pack = rows_to_pack) %>%
+    add_header_above(
+      c(" ", "Subjective MVPA Hurdle Lognormal" = 12,  
+        "Device-Based MVPA Log (Gaussian)" = 6, 
+        "Mood Gaussian" = 6,
+        #"Reactance Ordinal" = 6,
+        "Reactance Dichotome" = 6
+    )
+  )
+}
 
 export_xlsx(
   summary_all_models, 
@@ -880,7 +893,7 @@ export_xlsx(
 )
 
   
-print(summary_all_models)
+summary_all_models
 
 ```
 
@@ -1112,15 +1125,17 @@ pa_obj_log_digest <- digest::digest(pa_obj_log)
 rope_factor <- sd(log(pa_obj_log$data$pa_obj))
 rope_range_log = c(-0.1 * rope_factor, 0.1 * rope_factor)
 
-summarize_brms(
+summary_pa_obj <- summarize_brms(
   pa_obj_log, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   rope_range = rope_range_log,
   model_rows_fixed = model_rows_fixed,
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = T) %>%
+  exponentiate = T) 
+
+summary_pa_obj %>%
   print_df(rows_to_pack = rows_to_pack)
 
 
@@ -1207,14 +1222,16 @@ mood_gauss_digest <- digest::digest(mood_gauss)
 
 ```{r report_mood_gauss_pushingonly, results='asis', fig.width=8, fig.height=6, dpi=300}
 
-summarize_brms(
+summary_mood <- summarize_brms(
   mood_gauss, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   model_rows_fixed = model_rows_fixed,
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = F) %>%
+  exponentiate = F) 
+
+summary_mood %>%
   print_df(rows_to_pack = rows_to_pack)
 
 
@@ -1312,15 +1329,17 @@ reactance_ordinal_digest <- digest::digest(reactance_ordinal)
 
 ```{r report_reactance_ordinal_pushingonly, results='asis', fig.width=8, fig.height=6, dpi=300}
 
-summarize_brms(
+summary_reactance_ordinal <- summarize_brms(
   reactance_ordinal, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   rope_range = c(-0.18, 0.18),
   model_rows_fixed = model_rows_fixed_ordinal,
   model_rows_random = model_rows_random_ordinal,
   model_rownames_fixed = model_rownames_fixed_ordinal,
   model_rownames_random = model_rownames_random_ordinal,
-  exponentiate = T) %>%
+  exponentiate = T) 
+
+summary_reactance_ordinal %>%
   print_df(rows_to_pack = rows_to_pack_ordinal)
 
 
@@ -1420,14 +1439,16 @@ is_reactance_digest <- digest::digest(is_reactance)
 
 ```{r report_is_reactance_pushingonly, results='asis', fig.width=8, fig.height=6, dpi=300}
 
-summarize_brms(
+summary_is_reactance <- summarize_brms(
   is_reactance, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   model_rows_fixed = model_rows_fixed,
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = T) %>%
+  exponentiate = T) 
+
+summary_is_reactance %>%
   print_df(rows_to_pack = rows_to_pack)
 
 plot(
@@ -1460,38 +1481,40 @@ conditional_spaghetti(
 
 ```{r report_sidebyside_pushingonly, results = 'asis'}
 
-all_models <- report_side_by_side(
-  pa_sub,
-  pa_obj_log,
-  mood_gauss,
-  #reactance_ordinal,
-  is_reactance,
-  
-  stats_to_report = c('CI'),
-  
-  model_rows_random = model_rows_random,
-  model_rows_fixed = model_rows_fixed,
-  model_rownames_random = model_rownames_random,
-  model_rownames_fixed = model_rownames_fixed
-) 
-
-
+all_models <- cbind(
+  summary_pa_sub[, !grepl('Rhat|ESS', colnames(summary_pa_sub))],
+  summary_pa_obj[, !grepl('Rhat|ESS', colnames(summary_pa_obj))],
+  summary_mood[, !grepl('Rhat|ESS', colnames(summary_mood))], 
+  summary_is_reactance[, !grepl('Rhat|ESS', colnames(summary_is_reactance))]
+  #, summary_reactance_ordinal[, !grepl('Rhat|ESS', colnames(summary_reactance_ordinal))]
+)
 
 
 
 # pretty printing
-
-summary_all_models <- all_models %>%
+if (get_bayesfactor) {
+  summary_all_models <- all_models %>%
   print_df(rows_to_pack = rows_to_pack) %>%
   add_header_above(
-    c(" ", "Subjective MVPA Hurdle Lognormal" = 4,  
-      "Device-Based MVPA Log (Gaussian)" = 2, 
-      "Mood Gaussian" = 2,
-      #"Reactance Ordinal" = 2,
-      "Reactance Dichotome" = 2
+    c(" ", "Subjective MVPA Hurdle Lognormal" = 16,  
+      "Device-Based MVPA Log (Gaussian)" = 8, 
+      "Mood Gaussian" = 8,
+      #"Reactance Ordinal" = 8,
+      "Reactance Dichotome" = 8
   )
 )
-
+} else {
+  summary_all_models <- all_models %>%
+    print_df(rows_to_pack = rows_to_pack) %>%
+    add_header_above(
+      c(" ", "Subjective MVPA Hurdle Lognormal" = 12,  
+        "Device-Based MVPA Log (Gaussian)" = 6, 
+        "Mood Gaussian" = 6,
+        #"Reactance Ordinal" = 6,
+        "Reactance Dichotome" = 6
+    )
+  )
+}
 
 export_xlsx(
   summary_all_models, 
@@ -1504,7 +1527,7 @@ export_xlsx(
 )
 
   
-print(summary_all_models)
+summary_all_models
 
 ```
 
