--- a/02_As_Preregistered.Rmd
+++ b/02_As_Preregistered.Rmd
@@ -141,8 +141,8 @@ formula <- bf(
     is_A:persuasion_self_cb + is_B:persuasion_self_cb + 
     is_A:persuasion_partner_cb + is_B:persuasion_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     # Random effects
@@ -159,8 +159,8 @@ formula <- bf(
     is_A:persuasion_self_cb + is_B:persuasion_self_cb + 
     is_A:persuasion_partner_cb + is_B:persuasion_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     # Random effects
@@ -271,8 +271,8 @@ formula <- bf(
     is_A:pressure_self_cb + is_B:pressure_self_cb + 
     is_A:pressure_partner_cb + is_B:pressure_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     # Random effects
@@ -289,8 +289,8 @@ formula <- bf(
     is_A:pressure_self_cb + is_B:pressure_self_cb + 
     is_A:pressure_partner_cb + is_B:pressure_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     # Random effects
@@ -400,8 +400,9 @@ formula <- bf(
     is_A:pushing_self_cb + is_B:pushing_self_cb + 
     is_A:pushing_partner_cb + is_B:pushing_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
+    barriers_self_cw + barriers_self_cb + 
     is_A:day + is_B:day + 
     
     # Random effects
@@ -418,8 +419,8 @@ formula <- bf(
     is_A:pushing_self_cb + is_B:pushing_self_cb + 
     is_A:pushing_partner_cb + is_B:pushing_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     # Random effects
@@ -519,10 +520,6 @@ Hurdle part of the model on the left, non-zero part towards the right side of th
 
 
 
-
-
-
-
 ## Device Based MVPA 
 
 ```{r explore_pa_obj_dist}
@@ -552,8 +549,8 @@ formula <- bf(
     is_A:persuasion_self_cb + is_B:persuasion_self_cb + 
     is_A:persuasion_partner_cb + is_B:persuasion_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     is_A:weartime_self_cw + is_B:weartime_self_cw + 
@@ -657,8 +654,8 @@ formula <- bf(
     is_A:pressure_self_cb + is_B:pressure_self_cb + 
     is_A:pressure_partner_cb + is_B:pressure_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     is_A:weartime_self_cw + is_B:weartime_self_cw + 
@@ -762,8 +759,9 @@ formula <- bf(
     is_A:pushing_self_cb + is_B:pushing_self_cb + 
     is_A:pushing_partner_cb + is_B:pushing_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
+    barriers_self_cw + barriers_self_cb + 
     is_A:day + is_B:day + 
     
     is_A:weartime_self_cw + is_B:weartime_self_cw + 
@@ -880,8 +878,8 @@ formula <- bf(
     is_A:persuasion_self_cb + is_B:persuasion_self_cb + 
     is_A:persuasion_partner_cb + is_B:persuasion_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     # Random effects
@@ -979,8 +977,8 @@ formula <- bf(
     is_A:pressure_self_cb + is_B:pressure_self_cb + 
     is_A:pressure_partner_cb + is_B:pressure_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     # Random effects
@@ -1077,8 +1075,9 @@ formula <- bf(
     is_A:pushing_self_cb + is_B:pushing_self_cb + 
     is_A:pushing_partner_cb + is_B:pushing_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
+    barriers_self_cw + barriers_self_cb + 
     is_A:day + is_B:day + 
     
     # Random effects
@@ -1201,8 +1200,8 @@ formula <- bf(
     is_A:persuasion_self_cb + is_B:persuasion_self_cb + 
     is_A:persuasion_partner_cb + is_B:persuasion_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     # Random effects
@@ -1301,8 +1300,8 @@ formula <- bf(
     is_A:pressure_self_cb + is_B:pressure_self_cb + 
     is_A:pressure_partner_cb + is_B:pressure_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
     is_A:day + is_B:day + 
     
     # Random effects
@@ -1401,8 +1400,9 @@ formula <- bf(
     is_A:pushing_self_cb + is_B:pushing_self_cb + 
     is_A:pushing_partner_cb + is_B:pushing_partner_cb +
     
-    is_A:plan_self + is_B:plan_self + 
-    is_A:plan_partner + is_B:plan_partner +
+    #is_A:plan_self + is_B:plan_self + 
+    #is_A:plan_partner + is_B:plan_partner +
+    barriers_self_cw + barriers_self_cb + 
     is_A:day + is_B:day + 
     
     # Random effects
