--- a/Descriptives.Rmd
+++ b/Descriptives.Rmd
@@ -43,6 +43,7 @@ df_full <- dfs[[2]]
 # Sample Statistics
 
 ```{r sample_desc, results='asis'}
+# Sample Statistics
 
 # Income (mean of both partner's report)
 merge_income <- function(income1, income2) {
@@ -72,7 +73,7 @@ merge_income <- function(income1, income2) {
       merged_income[i] <- income2[i]
     }
     
-    # Now we only have cases, where both are either 70 or 99. We simply report "undisclosed". 
+    # Now we only have cases, where both are either 70 or 99. We simply report "Undisclosed". 
     else {
       merged_income[i] <- 99
     }
@@ -82,13 +83,13 @@ merge_income <- function(income1, income2) {
   merged_income <- factor(
     merged_income, levels = c(1,2,3,4,5,6,70,99), 
     labels = c(
-      "up to CHF 2'000.-", 
-      "CHF 2'001.- to CHF 4'000.-",
-      "CHF 4'001.- to CHF 6'000.-",
-      "CHF 6'001.- to CHF 8'000.-",
-      "CHF 8'001.- to CHF 10'000.-", 
-      "above CHF 10'000.-", 
-      "I don't know",
+      "Up to CHF 2'000", 
+      "CHF 2'001 to CHF 4'000",
+      "CHF 4'001 to CHF 6'000",
+      "CHF 6'001 to CHF 8'000",
+      "CHF 8'001 to CHF 10'000", 
+      "Above CHF 10'000", 
+      "I do not know",
       "Undisclosed"
   )
   )
@@ -96,45 +97,42 @@ merge_income <- function(income1, income2) {
   return(merged_income)
 }
 
-
-
 df_sample_report <- df_full %>%
   group_by(coupleID) %>%
   arrange(userID) %>%
   # Computing couple level variables
   mutate(
-    Household_Income = merge_income(first(pre_income_1), last(pre_income_1)),
+    "Household income" = merge_income(first(pre_income_1), last(pre_income_1)),
     
     reldur = pre_rel_duration_m / 12 + pre_rel_duration_y,
-    Relationship_duration = mean(reldur, na.rm = TRUE),
+    "Relationship duration" = mean(reldur, na.rm = TRUE),
     
     habdur = pre_hab_duration_m / 12 + pre_hab_duration_y,
-    Cohabiting_duration = mean(habdur, na.rm = TRUE),
+    "Cohabiting duration" = mean(habdur, na.rm = TRUE),
     
-    Marital_status = factor(
+    "Marital status" = factor(
       case_when(
         all(pre_mat_stat == 1) ~ "Married",
-        any(pre_mat_stat == 1) ~ "One Partner Married",
-        TRUE ~ "Not Married"
+        any(pre_mat_stat == 1) ~ "One partner married",
+        TRUE ~ "Not married"
       )
     ),
     
-    Have_children = factor(
+    "Have children" = factor(
       (first(pre_child_option) + last(pre_child_option)) > 0, 
       levels = c(FALSE, TRUE), 
-      labels = c('Have Children', 'No Children')),
+      labels = c("Have children", "No children")),
     
     Gender = factor(
       gender, 
       levels = c(1,2,3), 
-      labels = c('Male','Female', 'Other')),
+      labels = c("Male", "Female", "Other")),
     
-
-    Couple_type = as.factor(
+    "Couple type" = as.factor(
       case_when(
-        first(Gender) == last(Gender) & first(Gender) == 'Male' ~ 'Same-Sex Couple (Male)',
-        first(Gender) == last(Gender) & first(Gender) == 'Female' ~ 'Same-Sex Couple (Female)',
-        TRUE ~ 'Mixed-sex Couple'
+        first(Gender) == last(Gender) & first(Gender) == "Male" ~ "Same-sex couple (male)",
+        first(Gender) == last(Gender) & first(Gender) == "Female" ~ "Same-sex couple (female)",
+        TRUE ~ "Mixed-sex couple"
       )
     )
   ) %>%
@@ -145,14 +143,14 @@ df_sample_report <- df_full %>%
     Handedness = factor(
       pre_handedness, 
       levels = c(0, 1, 2), 
-      c('Right','Left', 'Ambidextrous')),
-  Highest_Education = factor(
+      labels = c("Right", "Left", "Ambidextrous")),
+  "Highest education" = factor(
     pre_education, 
     levels = c(1,2,3,4,5,6,7), 
     labels = c(
-      "(still) no school diploma",
-      "compulsory education (9 years)",
-      "vocational training (apprenticeship)",
+      "(Still) no school diploma",
+      "Compulsory education (9 years)",
+      "Vocational training (apprenticeship)",
       "Matura (university entrance qualification)",
       "Bachelor's degree", 
       "Master's degree",
@@ -161,9 +159,9 @@ df_sample_report <- df_full %>%
     ),
   BMI = pre_weight / ((pre_height / 100)^2) # to meters
   ) %>%
-  select(c(Relationship_duration, Cohabiting_duration, Couple_type, Household_Income, 
-            Marital_status, Have_children, 
-            Gender, Age, Handedness, Highest_Education, BMI))
+  select(c("Relationship duration", "Cohabiting duration", "Couple type", "Household income", 
+            "Marital status", "Have children", 
+            Gender, Age, Handedness, "Highest education", BMI))
 
 
 sample_table <- report_measures(df_sample_report, ICC = F)
@@ -193,6 +191,8 @@ export_xlsx(df_sample_summary,
             )
 
 df_sample_summary
+
+
 
 ```
 
