--- a/05_SensitivityBarriersInteraction(ONLY_DAYS_WITH_PLAN).Rmd
+++ b/05_SensitivityBarriersInteraction(ONLY_DAYS_WITH_PLAN).Rmd
@@ -35,6 +35,8 @@ library(see)
 library(beepr)
 library(DHARMa)
 library(digest)
+library(tidybayes)
+library(ggplot2)
 
 
 
@@ -59,8 +61,8 @@ use_mi = FALSE
 shutdown = FALSE
 report_ordinal = FALSE
 do_priorsense = FALSE
-get_bayesfactor = TRUE
-check_models = TRUE 
+get_bayesfactor = FALSE
+check_models = FALSE 
 
 if (get_bayesfactor) {
   stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
@@ -1311,11 +1313,15 @@ Plot Interaction effect.
 ```{r}
 
 library(ggplot2)
+library(plotly)
+
+
 p <- conditional_effects(
   pa_sub, 
   dpar = 'hu',
   effects = 'pushing_self_cw:barriers_self_cw',
-  #re_formula = NULL, 
+  re_formula = NA, 
+  method = 'posterior_linpred',
   plot = FALSE
 )
 
@@ -1325,7 +1331,155 @@ p2[[1]]$estimate__ <- 1 - p[[1]]$estimate__
 p2[[1]]$lower__ <- 1 - p[[1]]$upper__
 p2[[1]]$upper__ <- 1 - p[[1]]$lower__
 
-plot(p2, ask = FALSE)
+plot(p2)
+
+
+```
+
+# Test slope of pushing at high levels of barriers
+
+```{r}
+
+
+# Assuming your model is stored in 'pa_sub' and your data in 'df_double'
+moderator <- "barriers_self_cw"  
+
+# Generate 100 moderator values within its range
+moderator_seq <- seq(
+  from = min(df_double[[moderator]], na.rm = TRUE),
+  to   = max(df_double[[moderator]], na.rm = TRUE),
+  length.out = 1000
+)
+
+# Extract posterior draws for the parameters of interest.
+post_draws <- spread_draws(
+  pa_sub,
+  b_hu_pushing_self_cw,
+  `b_hu_barriers_self_cw:pushing_self_cw`
+)
+
+# For each moderator value, compute the slope for each posterior draw.
+slope_list <- lapply(moderator_seq, function(mod_val) {
+  tibble(
+    moderator_value = mod_val,
+    slope = -(post_draws$b_hu_pushing_self_cw + mod_val * post_draws$`b_hu_barriers_self_cw:pushing_self_cw`)
+  )
+})
+
+# Combine the list into a single data frame
+slope_df <- bind_rows(slope_list)
+
+# Summarize the posterior for each moderator value (using a 95% credible interval)
+slope_summary <- slope_df %>%
+  group_by(moderator_value) %>%
+  summarize(
+    slope_median = median(slope),
+    slope_lower  = quantile(slope, probs = 0.025),
+    slope_upper  = quantile(slope, probs = 0.975)
+  ) %>%
+  # Create significance flag: "sig" if CI excludes 0, "ns" otherwise
+  mutate(sig_flag = if_else(slope_lower > 0 | slope_upper < 0, "sig", "ns"))
+
+
+# 1) Make sure slope_summary is sorted
+slope_summary <- slope_summary %>%
+  arrange(moderator_value)
+
+# 2) Identify boundary rows
+slope_summary <- slope_summary %>%
+  mutate(
+    next_sig_flag = lead(sig_flag),
+    is_boundary   = sig_flag != next_sig_flag & !is.na(next_sig_flag)
+  )
+
+# 3) Duplicate boundary rows for each category
+boundary_rows <- slope_summary %>%
+  filter(is_boundary)
+
+boundary_rows_next <- boundary_rows
+boundary_rows_next$sig_flag <- boundary_rows_next$next_sig_flag
+
+# 4) Combine original + duplicated boundary rows
+slope_summary_extended <- bind_rows(slope_summary, boundary_rows_next)
+
+# 5) Split into "sig" and "ns"
+slope_summary_sig <- slope_summary_extended %>% filter(sig_flag == "sig")
+slope_summary_ns  <- slope_summary_extended %>% filter(sig_flag == "ns")
+
+
+slope_summary <- slope_summary %>%
+  mutate(
+    slope_median_exp = exp(slope_median),
+    slope_lower_exp  = exp(slope_lower),
+    slope_upper_exp  = exp(slope_upper)
+  )
+
+
+# 6) Plot with a legend for significance
+p <- ggplot() +
+  # --- Non-significant region ---
+  geom_ribbon(
+    data = slope_summary_ns,
+    aes(x = moderator_value, ymin = slope_lower, ymax = slope_upper,
+        fill = "Non-significant"), 
+    alpha = 0.2
+  ) +
+  geom_line(
+    data = slope_summary_ns,
+    aes(x = moderator_value, y = slope_median,
+        color = "Non-significant"), 
+    size = 1
+  ) +
+  # --- Significant region ---
+  geom_ribbon(
+    data = slope_summary_sig,
+    aes(x = moderator_value, ymin = slope_lower, ymax = slope_upper,
+        fill = "Significant"), 
+    alpha = 0.2
+  ) +
+  geom_line(
+    data = slope_summary_sig,
+    aes(x = moderator_value, y = slope_median,
+        color = "Significant"),
+    size = 1
+  ) +
+  # Reference line
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  # Manual scales for fill & color
+  scale_fill_manual(
+    values = c("Significant" = "steelblue",
+               "Non-significant" = "coral")
+  ) +
+  scale_color_manual(
+    values = c("Significant" = "steelblue",
+               "Non-significant" = "coral")
+  ) +
+  labs(
+    x = "Daily Barriers",
+    y = "Slope (Plan-Related Pushing)",
+    fill = "Significance",       # legend title for ribbons
+    color = "Significance"       # legend title for lines
+  ) +
+  theme_minimal()
+
+p2 <- p +
+  geom_vline(
+    data = boundary_rows,
+    aes(xintercept = moderator_value),
+    color = "steelblue",
+    alpha = 0.35,
+    size = 0.7,
+    linetype = "dashed"
+  ) +
+  geom_text(
+    data = boundary_rows,
+    aes(x = moderator_value, y = -Inf, label = round(moderator_value, 3)),
+    vjust = -1.5,
+    size = 3.7
+  )
+
+p2
+
 
 ```
 
